--- a/public/css/style-profile.css
+++ b/public/css/style-profile.css
@@ -30,10 +30,10 @@
 #profile-tablist a{
     display: inline-block;
     text-align: center;
-    padding: 10px 20px;
+    padding: 10px 12px;
     text-decoration: none;
     color: black;
-    font-size: 16px;
+    font-size: 15px;
     font-weight: bold;
 }
 
@@ -47,7 +47,7 @@
     text-align: center;
 }
 
-#user-information div{
+#user-information > div{
     padding-bottom: 10px;
     margin-left: 30px;
 }
@@ -59,7 +59,6 @@
 #info-email{
     font-size: 18px;
 }
-
 
 #role-faculty, a[class~="tr-role-admin"]{
     display: inline-block;
@@ -74,7 +73,6 @@
 }
 
 #info-faculty,#info-admin{
-    margin-top: -10px;
     text-align: left;
 }
 
@@ -143,9 +141,17 @@
     text-align: center;
 }
 
+.tr-course-list-info{
+    padding-top: 15px;
+}
+
 .tr-course-list-date{
     padding-top: 15px;
     text-align: center;
+}
+
+#interested .tr-course-list-date{
+    padding-top: 40px;
 }
 
 .tr-course-list-date h5{
