--- a/public/css/style-course.css
+++ b/public/css/style-course.css
@@ -56,6 +56,7 @@
 
 .tr-course-material{
     padding-top: 80px;
+    position: relative;
 }
 
 .tr-course-material-ordinal{
@@ -103,3 +104,7 @@
     margin: 30px 0;
 }
 
+.tr-course-material-disabled{
+    background-image: url('../dark-blur-blurred-gradient.jpg');
+    transition: background-image .2s ease-out;
+}
