--- a/public/views/user/user.view.client.html
+++ b/public/views/user/user.view.client.html
@@ -14,23 +14,7 @@
 
         </div>
         <div class="col-sm-9" >
-            <!--<ul class="tr-tablist">-->
-                <!--<li>-->
-                    <!--<a href="">-->
-                        <!--Enrolled-->
-                    <!--</a>-->
-                <!--</li>-->
-                <!--<li>-->
-                    <!--<a href="">-->
-                        <!--Completed-->
-                    <!--</a>-->
-                <!--</li>-->
-                <!--<li>-->
-                    <!--<a href="">-->
-                        <!--Interested-->
-                    <!--</a>-->
-                <!--</li>-->
-            <!--</ul>-->
+
             <div id="profile-tablist">
                 <a href=""
                    data-target="#enrolled"
@@ -115,28 +99,24 @@
                 {{model.user.city}}, {{model.user.postalCode}} <br>
                 {{model.user.country}}
             </div>
+
+            <button ng-click="model.test()">test</button>
+
             <!--<div id="info-phone">-->
                 <!--{{model.user.}}-->
             <!--</div>-->
+
         </div>
         <div class="col-sm-8">
             <div id="profile-tabpane">
 
-                <div class="tr-failure-message"
-                     ng-show="model.actionDone && !model.operationSucceeded">
-                    Operation Failed!
-                </div>
-
-                <div class="tr-success-message"
-                     ng-show="model.actionDone && model.operationSucceeded">
-                    Operation Succeeded!
-                </div>
+                <ng-include src="'views/user/operation-message.html'"></ng-include>
 
                 <ul class="list-group tr-tab-content tr-active"
                     id="enrolled"
                     data-tab-type="list">
                     <li class="list-group-item" ng-repeat="course in model.courses.enrolled">
-                        <ng-include src="'views/user/course-list-item.html'"></ng-include>
+                        <ng-include src="'views/user/list-item/course-list-item.html'"></ng-include>
                     </li>
                 </ul>
 
