--- a/public/views/home/home.view.client.html
+++ b/public/views/home/home.view.client.html
@@ -13,7 +13,7 @@
             </div>
         </li>
         <li>
-            <a href="">
+            <a href="#!/login">
                 Log In
             </a>
             <div class="tr-navbar-item-underline">
@@ -60,12 +60,12 @@
     </div>
     <div id="home-button-group">
         <div class="tr-large-device-content">
-            <a href="">Sign Up</a>
+            <a href="#!/register">Sign Up</a>
             <a href="">Find a Course</a>
         </div>
         <div class="tr-small-device-content">
             <div>
-                <a href="">Sign Up</a>
+                <a href="#!/register">Sign Up</a>
             </div>
             <div>
                 <a href="">Find a Course</a>
